z-index issue fixing on homepage two banner

--- a/src/scss/pages/_home02.scss
+++ b/src/scss/pages/_home02.scss
@@ -9,6 +9,7 @@
   padding-top: 150px;
   padding-bottom: 200px;
   background-color: rgba($color: #ebebf2, $alpha: 0.55);
+  z-index: 1;
   &-start {
     h1 {
       margin-bottom: 20px;
